--- a/apps/datadog.yaml
+++ b/apps/datadog.yaml
@@ -2,14 +2,14 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: datadog-agent
-  namespace:  tools
+  namespace:  argocd
     
 spec:
   destination:
     namespace: monitoring
     server: https://kubernetes.default.svc
       
-  project:  monitoring
+  project:  default
   syncPolicy:
     automated: 
       prune:  true
