--- a/apps/jenkins.yaml
+++ b/apps/jenkins.yaml
@@ -8,7 +8,7 @@ spec:
   destination:
     namespace: tools
     server: https://kubernetes.default.svc
-  project:  tools
+  project:  default
   syncPolicy:
   source:
     chart:  jenkins
