--- a/apps/consul.yaml
+++ b/apps/consul.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ci
+  name: consul
   namespace: argocd
 spec:
   destination:
